fixed image stretching on phone

--- a/styles/index.css
+++ b/styles/index.css
@@ -346,9 +346,9 @@ nav {
 			gap: 1rem;
 
 			img {
-				border-radius: 3vw;
+				border-radius: 20%;
 				width: 35%;
-				height: fit-content;
+				height: auto;
 			}
 
 			.heading {
